feat: add api for showing basic information
